# dual_robots_hand_gesture_teleoperation

./: README.md  app.py  gesture.py
arm_api2/config/franka/: franka_kinematics.yaml  franka_sim.yaml
arm_api2/config/franka_left/: franka_left_servo_sim.yaml  franka_left_sim.yaml
arm_api2/config/franka_right/: franka_right_servo_sim.yaml  franka_right_sim.yaml
arm_api2_msgs/: CMakeLists.txt
arm_api2_py/: package.xml
arm_api2_py/arm_api2_py/: arm_api2_client.py
arm_api2_py/examples/: arm_api2_client_example.py
cv_franka_bridge/cv_franka_bridge/: cv_franka_bridge.py
dual_panda_demo/src/dual_panda_description/launch/: demo.launch.py  view_robot.rviz
dual_panda_demo/src/dual_panda_moveit_config/: .setup_assistant  package.xml
dual_panda_demo/src/dual_panda_moveit_config/config/: dual_panda.ros2_control.xacro  dual_panda.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  left_panda_simulated_config.yaml  moveit_controllers.yaml  right_panda_simulated_config.yaml  ros2_controllers.yaml
dual_panda_demo/src/dual_panda_moveit_config/launch/: demo_my.launch.py
hand_teleop/: package.xml  setup.py
hand_teleop/hand_teleop/: hand_teleop.py
handcv/handcv/: handcv.py  handdetect.py  handtorobot.py
pymoveit2/examples/: ex_ik.py  ex_pose_goal.py  ex_servo.py
pymoveit2/pymoveit2/robots/: panda_left.py  panda_right.py
