<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_teleop</name>
  <version>0.0.0</version>
  <description>A package to teleoperate a robot using computer vision</description>
  <maintainer email="guanqichen707@outlook.com">Guanqi Chen</maintainer>
  <license>APLv2</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_servo</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
